<resources>
    <string name="app_name">Pizzaria</string>
    <string name="mussarela">Mussarela</string>
    <string name="calabresa">Calabresa</string>
    <string name="portuguesa">Portuguesa</string>
    <string name="borda">Borda Recheada</string>
    <string name="calcular">Calcular</string>
    <string name="valorPedido">Valor do pedido: </string>
    <string name="formaPagamento">Forma de pagamento: </string>
</resources>
